--- a/app/styles/dashboard/user/UserDashboard.module.css
+++ b/app/styles/dashboard/user/UserDashboard.module.css
@@ -7,3 +7,10 @@
 .header {
     margin-bottom: 10px;
 }
+
+.loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+}
