--- a/app/styles/landing/HeroSection.module.css
+++ b/app/styles/landing/HeroSection.module.css
@@ -1,32 +1,33 @@
 .hero {
-    background: linear-gradient(.25turn, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.142)),
-                url('../../../public/hero-background.jpg') no-repeat center bottom / cover;
+    background: url('../../../public/Cloudy.svg') no-repeat center bottom / cover;
     height: 80vh;
     display: flex;
     align-items: center;
-    justify-content: left;
-    padding: 0 300px;
+    justify-content: center;
     margin-top: 64px;
 }
 
 .hero__messageContainer {
     max-width: 500px;
-    color: black;
+    color: white;
+    padding: 1rem;
 }
 
 .hero__messageContainer h1 {
     font-size: 4rem;
+    font-weight: bold;
     margin-bottom: 10px;
-    color: #0E2745;
+    color: white;
 }
 
 .view-button {
-    background-color: #0E2645;
+    background-color: #ECBC3E;
     padding: 1rem;
-    color: white !important;
+    color: #0E2645 !important;
     width: fit-content;
-    border: 3px solid #0E2645;
+    border: 3px solid #ECBC3E;
     cursor: pointer;
+    border-radius: 10px;
 }
 
 .view-button:hover {
