--- a/app/styles/landing/OfferSection.module.css
+++ b/app/styles/landing/OfferSection.module.css
@@ -1,5 +1,8 @@
 .offer-section {
     padding: 3rem 7rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .header-container {
@@ -7,6 +10,14 @@
     margin-bottom: 2rem;
 }
 
+.header-container h1 {
+    font-weight: bold;
+}
+
 .carousel-container {
     padding: 0 20rem;
+    min-width: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
