--- a/app/globals.css
+++ b/app/globals.css
@@ -49,7 +49,7 @@ a:hover {
 .tomb-marker {
   height: 20px;
   width: 10px;
-  background-color: red;
+  background-color: #32CD32;
   border: 1px solid black;
 }
 
@@ -68,7 +68,7 @@ a:hover {
 .mausoleum-marker {
   height: 35px;
   width: 35px;
-  background-color: red;
+  background-color: #32CD32;
   border: 1px solid black;
 }
 
