--- a/app/styles/login/LoginPage.module.css
+++ b/app/styles/login/LoginPage.module.css
@@ -24,6 +24,7 @@
     color: #0E2745;
     cursor: pointer;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    border: none;
 }
 
 .login-button--disabled {
@@ -37,6 +38,7 @@
     background-color: grey;
     color: white;
     cursor: auto;
+    border: none;
 }
 
 .login-button:hover {
