--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,22 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   color: #0E2745;
+  margin-bottom: 0 !important;
+}
+
+h2 {
+  font-size: 1.5em !important;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 1.17em !important;
+  font-weight: bold;
+}
+
+h4 {
+  font-size: 1rem !important;
+  font-weight: bold;
 }
 
 a {
