--- a/app/globals.css
+++ b/app/globals.css
@@ -19,21 +19,21 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   color: #0E2745;
-  margin-bottom: 0 !important;
+  margin-bottom: 0;
 }
 
 h2 {
-  font-size: 1.5em !important;
+  font-size: 1.5em;
   font-weight: bold;
 }
 
 h3 {
-  font-size: 1.17em !important;
+  font-size: 1.17em;
   font-weight: bold;
 }
 
 h4 {
-  font-size: 1rem !important;
+  font-size: 1rem;
   font-weight: bold;
 }
 
